--- a/index.html
+++ b/index.html
@@ -24,10 +24,8 @@
 			<div id="header_logo">
 				<img src="image/logo.png" alt="ロゴ" style="height: 40px;width: 100px;" class="centerpos">
 				<div id="user_info">
-					<a href="mypage.html">
 					<p id="name">Hattori</p>
 					<img src="image/face/99.png" class="circle" alt="アイコン">
-					</a>
 				</div>
 			</div>
 		</div>
@@ -43,21 +41,41 @@
 				<div class="col s4">
 					<a href="detail.html">
 						<img src="image/sticker/1.png" alt="ブロックチェーン1" id="searchbutton">
-						<p>ブロックチェーン1</p>
+						<p>Nuxt.js</p>
 					</a>
 				</div>
 				<!-- <div class="col s4"> -->
 				<div class="col">
 					<a href="detail.html">
 						<img src="image/sticker/2.png" alt="ブロックチェーン2">
-						<p>ブロックチェーン2</p>
+						<p>Java</p>
 					</a>
 				</div>
 				<!-- <div class="col s4 searchvisible"> -->
 				<div class="col s4">
 					<a href="detail.html">
 						<img src="image/sticker/3.png" alt="ブロックチェーン3">
-						<p>ブロックチェーン3</p>
+						<p>NEM</p>
+					</a>
+				</div>
+				<div class="col s4">
+					<a href="detail.html">
+						<img src="image/sticker/9.png" alt="ブロックチェーン1" id="searchbutton">
+						<p>STARBUCKS</p>
+					</a>
+				</div>
+				<!-- <div class="col s4"> -->
+				<div class="col">
+					<a href="detail.html">
+						<img src="image/sticker/14.png" alt="ブロックチェーン2">
+						<p>AKB48</p>
+					</a>
+				</div>
+				<!-- <div class="col s4 searchvisible"> -->
+				<div class="col s4">
+					<a href="detail.html">
+						<img src="image/sticker/17.png" alt="ブロックチェーン3">
+						<p>Ethereum</p>
 					</a>
 				</div>
 			</div>
@@ -70,25 +88,25 @@
 				<li class="near_list icons col s3">
 					<a href="mypage.html">
 					<img src="image/face/1.png" class="circle" alt="近くのユーザー1" style="height: 100px; width: 100px;">
-					<p>ユーザー1</p>
+					<p>Lian</p>
 					</a>
 				</li>
 				<li class="near_list icons col s3">
 					<a href="mypage.html">
 					<img src="image/face/2.png" class="circle" alt="近くのユーザー2" style="height: 100px; width: 100px;">
-					<p>ユーザー2</p>
+					<p>Antony</p>
 					</a>
 				</li>
 				<li class="near_list icons col s3">
 					<a href="mypage.html">
 						<img src="image/face/3.png" class="circle" alt="近くのユーザー3" style="height: 100px; width: 100px;">
-						<p>ユーザー3</p>
+						<p>Makkatony</p>
 					</a>
 				</li>
 				<li class="near_list icons col s3">
 					<a href="mypage.html">
 						<img src="image/face/7.png" class="circle" alt="近くのユーザー4" style="height: 100px; width: 100px;">
-						<p>ユーザー4</p>
+						<p>Mayu</p>
 					</a>
 				</li>
 			</ul>
@@ -101,31 +119,31 @@
 				<li class="follow_list icons col s3">
 					<a href="mypage.html">
 						<img src="image/face/4.png" class="circle"  alt="フレンドユーザー1" style="height: 100px; width: 100px;">
-						<p>フレンドユーザー1</p>
+						<p>Aoi</p>
 					</a>
 				</li>
 				<li class="follow_list icons col s3">
 					<a href="mypage.html">
 						<img src="image/face/5.png" class="circle"  alt="フレンドユーザー2" style="height: 100px; width: 100px;">
-						<p>フレンドユーザー2</p>
+						<p>Kanae</p>
 					</a>
 				</li>
 				<li class="follow_list icons col s3">
 					<a href="mypage.html">
 						<img src="image/face/6.png" class="circle" alt="フレンドユーザー3" style="height: 100px; width: 100px;">
-						<p>フレンドユーザー3</p>
+						<p>Rika</p>
 					</a>
 				</li>
 				<li class="follow_list icons col s3">
 					<a href="mypage.html">
 						<img src="image/face/8.png" class="circle" alt="フレンドユーザー4" style="height: 100px; width: 100px;">
-						<p>フレンドユーザー4</p>
+						<p>Ryota</p>
 					</a>
 					</li>
 				</ul>
 		</div>
 			
-	</div>
+	</div>div
 
 	<!--JavaScript at end of body for optimized loading-->
 	<script type="text/javascript" src="js/materialize.min.js"></script>
